Initial attempt to modernize CI scripts. Known Issues: 1) Previous CI scripts won't work as coffeescript took more than 50 mins (Under Travis CI for macOS / Linux) / 60 mins (Appveyor for Windows). Hence, it is now splitted into 2 test scripts. 2) macOS test scripts is not expected to work due to: - System Integrity Protection, which makes 'process.dlopen' not to work with 'image not found' error under coffeescript_2 - Unable to compile builds within 50 mins.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,80 @@
 language: node_js
-
+env:
+    global:
+        - NODEVER=10.15.2
+        - RUBYVER=2.5.3
+        - xcodeVer=xcode10.1
+        - LinDistro=xenial
+        - GCCVER=4.9
+        - arch=x64
+        - mode=release
+        - NODEC_TESTS_TMPDIR=/tmp/nodec_tests_tmpdir
+        - LINPRJDIR=/home/travis/build/slee047/node-packer
+        - OSXPRJDIR=/Users/travis/build/slee047/node-packer
+        - OSXRUBYRVMDIR=/Users/travis/.rvm
 matrix:
   include:
   - os: osx
-    node_js: 10.15.2
-    env: TEST_SCRIPT=coffeescript
+    osx_image: $xcodeVer
+    node_js: $NODEVER
+    env: TEST_SCRIPT=coffeescript_1
+    cache: 
+        npm: true
+        directories:
+            - $OSXRUBYRVMDIR
+  - os: linux
+    dist: $LinDistro
+    node_js: $NODEVER
+    env: TEST_SCRIPT=coffeescript_1
   - os: osx
-    node_js: 10.15.2
-    env: TEST_SCRIPT=microtime
+    osx_image: $xcodeVer
+    node_js: $NODEVER
+    env: TEST_SCRIPT=coffeescript_2
+    cache: 
+        npm: true
+        directories:
+            - $OSXRUBYRVMDIR
   - os: linux
-    node_js: 10.15.2
-    env: TEST_SCRIPT=coffeescript
-  - os: linux
-    node_js: 10.15.2
+    dist: $LinDistro
+    node_js: $NODEVER
+    env: TEST_SCRIPT=coffeescript_2
+  - os: osx
+    osx_image: $xcodeVer
+    node_js: $NODEVER
     env: TEST_SCRIPT=microtime
-
+    cache: 
+        npm: true
+        directories:
+            - $OSXRUBYRVMDIR
+  - os: linux
+    dist: $LinDistro
+    node_js: $NODEVER
+    env: TEST_SCRIPT=microtime
+before_install:
+  # Cache is limited to 1GB, so forget about caching homebrew or temp directories.
+  # Do NOT attempt to skip dependency check, or it will fail.
+  # The last command is a readline related workaround, source: https://gist.github.com/wbotelhos/46c37807c834ccb5bb406e426adfe347
+  - if \[ ${TRAVIS_OS_NAME} == "osx" \]; then brew install openssl nasm squashfs && sudo ln -sfn /usr/local/opt/readline/lib/libreadline.8.0.dylib /usr/local/opt/readline/lib/libreadline.7.dylib; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install "gcc-$GCCVER" "g++-$GCCVER" nasm squashfs-tools; fi
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-    packages:
-      - squashfs-tools
-      - gcc-4.9
-      - g++-4.9
-
 install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then rm -rf /usr/local/Cellar/openssl/ && brew install squashfs openssl; clang --version; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="g++-4.9" CC="gcc-4.9"; gcc-4.9 --version; g++-4.9 --version; fi
-
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PRJROOT_DIR="$OSXPRJDIR"; clang --version; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PRJROOT_DIR="$LINPRJDIR"; export CXX="g++-$GCCVER" CC="gcc-$GCCVER"; "gcc-$GCCVER" --version; "g++-$GCCVER" --version; fi
+  - mkdir -p $NODEC_TESTS_TMPDIR
+  - cd node-packer
+  - git clone --depth 1 https://github.com/jashkenas/coffeescript.git
 before_script:
-  - rvm install ruby-2.5.3
-  - rvm use ruby-2.5.3
+  - rvm install ruby-$RUBYVER
+  - rvm use ruby-$RUBYVER
   - python --version
+  - nasm -v
   - mksquashfs -version
   - ruby --version
   - node --version
   - npm --version
 
 script:
-  - rm -rf /tmp/nodec_tests_tmpdir && mkdir /tmp/nodec_tests_tmpdir
-  - NODEC_TESTS_TMPDIR=/tmp/nodec_tests_tmpdir ruby tests/$TEST_SCRIPT || exit $?
+  - ruby tests/$TEST_SCRIPT || exit $?
