Attempt to get current directory and list of files and folders for all platforms

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,6 +70,8 @@ test_script:
 
     echo %cd%
 
+    dir
+
     git clone --depth 1 https://github.com/jashkenas/coffeescript.git & exit 0
 
     ruby tests\%TEST_SCRIPT%
