1st try to fix microtime process.dlopen.

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,8 @@ before_script:
   - ruby --version
   - node --version
   - npm --version
-  - npm rebuild bcrypt --build-from-source
+  # Fix microtime issue, source: https://itsfoss.com/solve-open-shared-object-file-quick-tip/
+  - sudo /sbin/ldconfig -v
 
 script:
   - ruby tests/$TEST_SCRIPT || exit $?
