--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,9 @@ addons:
         - openssl
         - nasm
 install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PRJROOT_DIR="$OSXPRJDIR"; clang --version; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PRJROOT_DIR="$LINPRJDIR"; export CXX="g++-$GCCVER" CC="gcc-$GCCVER"; "gcc-$GCCVER" --version; "g++-$GCCVER" --version; fi
+#LD_LIBRARY_PATH / DYLD_LIBRARY_PATH contains only darwin-x64, linux-arm, linux-x64 and win32
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PRJROOT_DIR="$OSXPRJDIR"; export DYLD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/darwin-x64;$DYLD_LIBRARY_PATH"; clang --version; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PRJROOT_DIR="$LINPRJDIR"; export CXX="g++-$GCCVER" CC="gcc-$GCCVER"; export LD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/linux-x64;$LD_LIBRARY_PATH"; "gcc-$GCCVER" --version; "g++-$GCCVER" --version; fi
   - mkdir -p $NODEC_TESTS_TMPDIR
   - git clone --depth 1 https://github.com/jashkenas/coffeescript.git
 before_script:
@@ -63,10 +64,8 @@ before_script:
   - ruby --version
   - node --version
   - npm --version
-  - if [ "$TEST_SCRIPT" = "coffeescript_2" && "$TRAVIS_OS_NAME" = "osx" ]; then cd node && npm install microtime; export DYLD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/darwin-x64;$DYLD_LIBRARY_PATH"; fi
-  - if [ "$TEST_SCRIPT" = "coffeescript_2" && "$TRAVIS_OS_NAME" = "linux" ]; then cd node && npm install microtime; export LD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/linux-x64;$LD_LIBRARY_PATH"; fi
-
-    #LD_LIBRARY_PATH / DYLD_LIBRARY_PATH contains only darwin-x64, linux-arm, linux-x64 and win32
-
+  - cd node
+  - npm install microtime
+  - cd $PRJROOT_DIR
 script:
   - ruby tests/$TEST_SCRIPT || exit $?
