--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,8 @@ environment:
   mode: release
   arch: x64
   matrix:
-    - TEST_SCRIPT: coffeescript_1
-    - TEST_SCRIPT: coffeescript_2
+    #- TEST_SCRIPT: coffeescript_1
+    #- TEST_SCRIPT: coffeescript_2
     - TEST_SCRIPT: microtime
 cache:
   - node_modules
