Microtime does not work for Unix. Hence, switching to date-time npm module instead.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 env:
     global:
         - NODEVER=10.15.2
-        - RUBYVER=2.5.3
+        - RubyMajMinVer=2.5
+        - RubyRevVer=3
         - xcodeVer=xcode10.1
         - LinDistro=xenial
         - GCCVER=4.9
@@ -32,11 +33,11 @@ matrix:
   - os: osx
     osx_image: $xcodeVer
     node_js: $NODEVER
-    env: TEST_SCRIPT=microtime
+    env: TEST_SCRIPT=datetime
   - os: linux
     dist: $LinDistro
     node_js: $NODEVER
-    env: TEST_SCRIPT=microtime
+    env: TEST_SCRIPT=datetime
 before_install:
   # Cache is limited to 1GB, so forget about caching homebrew or temp directories.
   # Do NOT attempt to skip dependency check, or it will fail.
@@ -47,16 +48,20 @@ addons:
       - ubuntu-toolchain-r-test
   homebrew:
     packages:
-        - ruby@2.5
         - squashfs
         - openssl
         - nasm
 install:
-#LD_LIBRARY_PATH / DYLD_LIBRARY_PATH contains only darwin-x64, linux-arm, linux-x64 and win32
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PRJROOT_DIR="$OSXPRJDIR"; export DYLD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/darwin-x64;$DYLD_LIBRARY_PATH"; clang --version; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PRJROOT_DIR="$LINPRJDIR"; export CXX="g++-$GCCVER" CC="gcc-$GCCVER"; export LD_LIBRARY_PATH="$PRJROOT_DIR/node/node_modules/microtime/prebuilds/linux-x64;$LD_LIBRARY_PATH"; "gcc-$GCCVER" --version; "g++-$GCCVER" --version; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PRJROOT_DIR="$OSXPRJDIR"; clang --version; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PRJROOT_DIR="$LINPRJDIR"; export CXX="g++-$GCCVER" CC="gcc-$GCCVER"; "gcc-$GCCVER" --version; "g++-$GCCVER" --version; fi
   - mkdir -p $NODEC_TESTS_TMPDIR
   - git clone --depth 1 https://github.com/jashkenas/coffeescript.git
+  - wget "https://cache.ruby-lang.org/pub/ruby/$RubyMajMinVer/ruby-$RubyMajMinVer.$RubyRevVer.tar.gz"
+  - tar -xvf "ruby-$RubyMajMinVer.$RubyRevVer.tar.gz"
+  - cd "$RubyMajMinVer.$RubyRevVer.tar.gz"
+  - ./configure
+  - make
+  - sudo make install
 before_script:
   - python --version
   - nasm -v
@@ -64,8 +69,5 @@ before_script:
   - ruby --version
   - node --version
   - npm --version
-  - cd node
-  - npm install microtime
-  - cd $PRJROOT_DIR
 script:
   - ruby tests/$TEST_SCRIPT || exit $?
