--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
   matrix:
     #- TEST_SCRIPT: coffeescript_1
     #- TEST_SCRIPT: coffeescript_2
-    - TEST_SCRIPT: microtime
+    - TEST_SCRIPT: datetime
 cache:
   - node_modules
 
